final  fixes to center and align paragraphs and even out spacing

--- a/styles/base.css
+++ b/styles/base.css
@@ -8,7 +8,7 @@ body {
   font-family: "Lato", sans-serif;
   font-weight: 400;
   font-size: larger;
-  max-width: 1000px;
+  max-width: 1100px;
 }
 
 h1 {
@@ -50,37 +50,37 @@ h2 {
   text-align: center;
   background-color: rgb(52, 52, 115);  
   color: white;
-  margin: 0 auto;
-  padding: .5rem;
+  margin: 0 auto;  
 }
 
 div {
-  padding: .5rem;
+  display: block;
+  margin: .5rem;
 }
 
 .card {
   background-color: white;
-  border: 0.5rem solid #ccc;
+  border: 1rem solid #ccc;
 }
 
 .card-content {
-  padding: 1rem;
-  flex: 1;
+  padding: 1rem;  
   margin: 0 auto;
   justify-content: center;
 }
 
 img.profilepic {
-  width: 35%;
+  width: 30%;
   display: block;  
   float: right; 
-  padding: .5rem; 
+  padding: .75rem; 
 }
 
 img.ocean {
   width: 50%;  
   Display: block; 
-  float: left;  
+  float: left;
+  padding: .5rem;   
 }
 
 .california h2 {
@@ -89,15 +89,18 @@ img.ocean {
   text-decoration: underline;
 }
 
+p {
+  padding: 1rem;
+}
+
  li {
   padding: 2rem;
   font-weight: 700;  
-  font-size: larger;
+  font-size: larger;  
 }
 
 footer {
   background-color: rgb(52, 52, 115);
   text-align: center;
-  color: white;
-  padding: 1rem;
+  color: white;  
 }
